<resources>
    <string name="app_name">Traxy</string>
    <string name="welcome_to">Welcome to</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="sign_in">Sign in</string>
    <string name="email_is_required">Email is required</string>
    <string name="successful_login">Successful login</string>
    <string name="logo_description">Super cool Traxy logo</string>
</resources>
